locale: Filled in missing ja entities. s/WindowsWarning/Bug449Warning/g
--HG--
extra : rebase_source : c8c2269a1f0401c8d47afe20f98e14f668737e4e

--- a/ubiquity/chrome/locale/ja/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/ja/aboutubiquity.properties
@@ -5,7 +5,7 @@
 ubiquity.nav.main=チュートリアル
 ubiquity.nav.settings=設定
 ubiquity.nav.commands=コマンドリスト
-ubiquity.nav.getnewcommands=コマンド取得
+ubiquity.nav.getnewcommands=コマンド入手
 ubiquity.nav.support=サポート
 ubiquity.nav.hackubiquity=Ubiquity 開発
 
@@ -28,6 +28,19 @@ ubiquity.prefkeys.meta=META
 
 # Key Combo Input for settings.xhtml (one-liner input focus)
 ubiquity.prefkeys.pressyourcombo=キーの組み合わせを入力してください...
+
+############################
+# localization-template.js
+# chrome://ubiquity/content/localization-template.xhtml
+#
+# cmdlist.js
+# chrome://ubiquity/content/cmdlist.xhtml
+#
+# the "show/hide help" messages.
+############################
+
+ubiquity.showhidehelp.show=ヘルプを表示
+ubiquity.showhidehelp.hide=ヘルプを隠す
 
 ############################
 # thenext.js
