--- a/ubiquity/chrome/locale/en-US/aboutubiquity.dtd
+++ b/ubiquity/chrome/locale/en-US/aboutubiquity.dtd
@@ -76,20 +76,23 @@ Sincerely,
 
 <!ENTITY ubiqutiy.about.MoreOnUsingUbiquity "More On Using &appTitle;">
 
-<!ENTITY ubiqutiy.about.UsingParagraph1 "After taking the basic tutorial on this page, you can learn more by reading the">
+<!ENTITY ubiqutiy.about.UsingParagraph1Part1 "After taking the basic tutorial on this page, you can learn more by reading the ">
 <!ENTITY ubiqutiy.about.UsingParagraph1LinkText "In-depth documentation page">
+<!ENTITY ubiqutiy.about.UsingParagraph1Part2 ".">
 
-<!ENTITY ubiqutiy.about.UsingParagraph2Part1 "<strong>Help us</strong> by subscribing to the">
+<!ENTITY ubiqutiy.about.UsingParagraph2Part1 "<strong>Help us</strong> by subscribing to the ">
 <!ENTITY ubiqutiy.about.UsingParagraph2LinkText1 "Herd">
-<!ENTITY ubiqutiy.about.UsingParagraph2Part2 ". This will add your data to the">
+<!ENTITY ubiqutiy.about.UsingParagraph2Part2 ". This will add your data to the ">
 <!ENTITY ubiqutiy.about.UsingParagraph2LinkText2 "dashboard">
-<!ENTITY ubiqutiy.about.UsingParagraph2Part3 "&mdash; it's completely anonymous and will help us make &appTitle; better and safer.">
+<!ENTITY ubiqutiy.about.UsingParagraph2Part3 " &mdash; it's completely anonymous and will help us make &appTitle; better and safer.">
 
-<!ENTITY ubiqutiy.about.UsingParagraph3 "For information about the goals of the &appTitle; project and our plans for upcoming releases, check out our">
+<!ENTITY ubiqutiy.about.UsingParagraph3Part1 "For information about the goals of the &appTitle; project and our plans for upcoming releases, check out our ">
 <!ENTITY ubiqutiy.about.UsingParagraph3LinkText "Roadmap">
+<!ENTITY ubiqutiy.about.UsingParagraph3Part2 ".">
 
-<!ENTITY ubiqutiy.about.UsingParagraph4 "&appTitle; is a team effort by contributors from all over the world. For a list of some of the contributors, check out the">
+<!ENTITY ubiqutiy.about.UsingParagraph4Part1 "&appTitle; is a team effort by contributors from all over the world. For a list of some of the contributors, check out the ">
 <!ENTITY ubiqutiy.about.UsingParagraph4LinkText "credits page">
+<!ENTITY ubiqutiy.about.UsingParagraph4Part2 ".">
 
 <!ENTITY ubiqutiy.about.Thanks "Thanks for using &appTitle; <span class='version'></span>!">
 <!ENTITY ubiquity.about.ThanksParagraph1 "Version <span class='version'></span> of &appTitle; addresses the most significant user interface and performance bugs found in the previous release. With this release you should notice increases in the speed, responsiveness, and accuracy of the parser. To learn more details about what's new, check out the">
@@ -124,8 +127,9 @@ Sincerely,
 <!ENTITY ubiquity.settings.ShareSkin "Share">
 <!ENTITY ubiquity.settings.SaveNotice "Clicking save immediately updates &appTitle;'s look.">
 
-<!ENTITY ubiquity.settings.WindowsWarning "If you are using Windows, then any changes you make to a custom skin can only be seen after a browser restart. This is a">
-<!ENTITY ubiquity.settings.WindowsWarningLinkText "known bug.">
+<!ENTITY ubiquity.settings.Bug449WarningPart1 "Changes you make to a custom skin may not be seen until after a browser restart. This is a ">
+<!ENTITY ubiquity.settings.Bug449WarningLinkText "known bug">
+<!ENTITY ubiquity.settings.Bug449WarningPart2 ".">
 
 <!-- Commands chrome/content/cmdlist.xhtml -->
 <!ENTITY ubiquity.commandlist.SubDetails1 "You have">
@@ -166,24 +170,26 @@ Sincerely,
 <!ENTITY ubiquity.support.ReportBugsParagraph1 "We are working on an automated bug report service, but for the time being you should report any reproducible problems you find using Get Satisfaction or through our Google Group/Mailing List. Please include any information you have about how to best reproduce the bug.">
 
 <!ENTITY ubiquity.support.ResetUbiquity "Resetting &appTitle;">
-<!ENTITY ubiquity.support.ResetUbiquityParagraph1Part1 "If &appTitle; becomes completely unresponsive to you, then it may be necessary to reset it to its &ldquo;factory defaults&rdquo; in order to use it again. To perform a reset,">
+<!ENTITY ubiquity.support.ResetUbiquityParagraph1Part1 "If &appTitle; becomes completely unresponsive to you, then it may be necessary to reset it to its &ldquo;factory defaults&rdquo; in order to use it again. To perform a reset, ">
 <!ENTITY ubiquity.support.ResetUbiquityParagraph1LinkText "click here">
-<!ENTITY ubiquity.support.ResetUbiquityParagraph1Part2 "&mdash; and please accept our apologies for the inconvenience!">
+<!ENTITY ubiquity.support.ResetUbiquityParagraph1Part2 " &mdash; and please accept our apologies for the inconvenience!">
 
 <!-- Hack chrome/content/editor.xhtml -->
 <!ENTITY ubiquity.editor.CommandEditorHeader "&appTitle; Command Editor">
 <!ENTITY ubiquity.editor.CommandEditorNewCommands "<strong>Enter new commands</strong> in the area below. They will automatically be saved as you type, and will be able to be instantly used from the command entry mode.">
 
-<!ENTITY ubiquity.editor.CommandEditorReadAuthTutPart1 "Read the">
+<!ENTITY ubiquity.editor.CommandEditorReadAuthTutPart1 "Read the ">
 <!ENTITY ubiquity.editor.CommandEditorReadAuthTutLinkText1 "command authoring tutorial">
-<!ENTITY ubiquity.editor.CommandEditorReadAuthTutPart2 "to learn more. For examples of built-in commands,">
+<!ENTITY ubiquity.editor.CommandEditorReadAuthTutPart2 " to learn more. For examples of built-in commands, ">
 <!ENTITY ubiquity.editor.CommandEditorReadAuthTutLinkText2 "look here">
+<!ENTITY ubiquity.editor.CommandEditorReadAuthTutPart3 ".">
 
-<!ENTITY ubiquity.editor.CommandEditorReadTheDocs "<strong>New:</strong> Documentation for the">
-<!ENTITY ubiquity.editor.CommandEditorReadTheDocsLinkText "command APIs.">
+<!ENTITY ubiquity.editor.CommandEditorReadTheDocs "Documentation for the ">
+<!ENTITY ubiquity.editor.CommandEditorReadTheDocsLinkText "command APIs">
 
-<!ENTITY ubiquity.editor.CommandEditorGetInvolved "<strong>Get involved</strong>. Learn how by visiting the">
-<!ENTITY ubiquity.editor.CommandEditorGetInvolvedLinkText "&appTitle; Wiki.">
+<!ENTITY ubiquity.editor.CommandEditorGetInvolvedPart1 "<strong>Get involved</strong>. Learn how by visiting the ">
+<!ENTITY ubiquity.editor.CommandEditorGetInvolvedLinkText "&appTitle; Wiki">
+<!ENTITY ubiquity.editor.CommandEditorGetInvolvedPart2 ".">
 
 <!ENTITY ubiquity.editor.YourExternalEd "Your external editor is">
 <!ENTITY ubiquity.editor.EditorCommandType "The command type is">
@@ -191,8 +197,9 @@ Sincerely,
 <!ENTITY ubiquity.editor.CmdTypeLocked "Locked-Down">
 <!ENTITY ubiquity.editor.RegularCommandDesc "<em>Regular</em> feeds have full freedom to do anything to your computer.">
 
-<!ENTITY ubiquity.editor.LockedCommandDesc "<em>Locked-Down</em> feeds are very safe but don't have much freedom to interact with your computer. For more information, see the">
-<!ENTITY ubiquity.editor.LockedCommandDescLinkText "Locked-Down Feed Tutorial.">
+<!ENTITY ubiquity.editor.LockedCommandDescPart1 "<em>Locked-Down</em> feeds are very safe but don't have much freedom to interact with your computer. For more information, see the ">
+<!ENTITY ubiquity.editor.LockedCommandDescLinkText "Locked-Down Feed Tutorial">
+<!ENTITY ubiquity.editor.LockedCommandDescPart2 ".">
 
 <!ENTITY ubiquity.editor.ImportTemplate "Import command template">
 <!ENTITY ubiquity.editor.LaunchExternalEd "Launch an external editor">
@@ -202,22 +209,25 @@ Sincerely,
 
 <!ENTITY ubiquity.editor.ShareYourCommands "Share Your Commands">
 
-<!ENTITY ubiquity.editor.ShareCommandsParagraph1Part1 "Post your command on the">
+<!ENTITY ubiquity.editor.ShareCommandsParagraph1Part1 "Post your command on the ">
 <!ENTITY ubiquity.editor.ShareCommandsParagraph1LinkText "commands in the wild">
-<!ENTITY ubiquity.editor.ShareCommandsParagraph1Part2 "wiki page so that other users can find it.">
+<!ENTITY ubiquity.editor.ShareCommandsParagraph1Part2 " wiki page so that other users can find it.">
 
-<!ENTITY ubiquity.editor.ShareCommandsParagraph2Part1 "Also, sign up for the the">
+<!ENTITY ubiquity.editor.ShareCommandsParagraph2Part1 "Also, sign up for the the ">
 <!ENTITY ubiquity.editor.ShareCommandsParagraph2LinkText1 "herd command">
-<!ENTITY ubiquity.editor.ShareCommandsParagraph2Part2 "which will then display your command on the">
-<!ENTITY ubiquity.editor.ShareCommandsParagraph2LinkText2 "dashboard.">
+<!ENTITY ubiquity.editor.ShareCommandsParagraph2Part2 " which will then display your command on the ">
+<!ENTITY ubiquity.editor.ShareCommandsParagraph2LinkText2 "dashboard">
+<!ENTITY ubiquity.editor.ShareCommandsParagraph2Part3 ".">
 
 <!ENTITY ubiquity.editor.DevelopingUbiquity "Developing &appTitle;">
 
-<!ENTITY ubiquity.editor.DevelopingUbiquityParagraph1 "Run the">
+<!ENTITY ubiquity.editor.DevelopingUbiquityParagraph1Part1 "Run the ">
 <!ENTITY ubiquity.editor.DevelopingUbiquityParagraph1LinkText "unit tests.">
+<!ENTITY ubiquity.editor.DevelopingUbiquityParagraph1Part2 ".">
 
-<!ENTITY ubiquity.editor.DevelopingUbiquityParagraph2 "Help us test our">
-<!ENTITY ubiquity.editor.DevelopingUbiquityParagraph2LinkText "experimental commands!">
+<!ENTITY ubiquity.editor.DevelopingUbiquityParagraph2Part1 "Help us test our ">
+<!ENTITY ubiquity.editor.DevelopingUbiquityParagraph2LinkText "experimental commands">
+<!ENTITY ubiquity.editor.DevelopingUbiquityParagraph2Part2 "!">
 
 <!ENTITY ubiquity.editor.DevelopingUbiquityParagraph3Part1 "Experiment with parser performance and introspect in the">
 <!ENTITY ubiquity.editor.DevelopingUbiquityParagraph3LinkText1 "parser playpen.">
@@ -225,8 +235,9 @@ Sincerely,
 <!ENTITY ubiquity.editor.DevelopingUbiquityParagraph3LinkText2 "nountype tuner">
 <!ENTITY ubiquity.editor.DevelopingUbiquityParagraph3Part3 "to check your nountypes' suggestions and scoring.">
 
-<!ENTITY ubiquity.editor.DevelopingUbiquityParagraph4 "And if you're going to be developing &appTitle; itself, check out our">
-<!ENTITY ubiquity.editor.DevelopingUbiquityParagraph4LinkText "core developer commands.">
+<!ENTITY ubiquity.editor.DevelopingUbiquityParagraph4Part1 "And if you're going to be developing &appTitle; itself, check out our ">
+<!ENTITY ubiquity.editor.DevelopingUbiquityParagraph4LinkText "core developer commands">
+<!ENTITY ubiquity.editor.DevelopingUbiquityParagraph4Part2 ".">
 
 <!ENTITY ubiquity.editor.LatestChangesFeedTitle "Latest &appTitle; Code Changes">
 
