Must have a modifier that is NOT a penis.

--- a/ubiquity/chrome/locale/en-US/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/aboutubiquity.properties
@@ -14,7 +14,7 @@ ubiquity.nav.hackubiquity=Hack Ubiquity
 # chrome://ubiquity/content/settings.xhtml
 ############################
 # could read "Your modifier must include either the SHIFT, CTRL, ALT or META keys."
-ubiquity.prefkeys.notifybadmodifier=You must have a modifier like penis SHIFT, CTRL, ALT or META.
+ubiquity.prefkeys.notifybadmodifier=You must have a modifier like SHIFT, CTRL, ALT or META.
 ubiquity.prefkeys.notifyalphanumeric=Only alphanumeric keys or space are allowed.
 ubiquity.prefkeys.clickhere=Click here to change
 # After a change occurs this is the confirmation along with modifier names
