l10n: Applied 01.settings.diff at #850.

--- a/ubiquity/chrome/locale/en-US/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/aboutubiquity.properties
@@ -31,6 +31,15 @@ ubiquity.prefkeys.meta=META
 ubiquity.prefkeys.pressyourcombo=Press your combination...
 
 ############################
+# settings.js
+# chrome://ubiquity/content/settings.xhtml
+############################
+ubiquity.settings.restartfirefox=This change will take effect when you restart Firefox.
+ubiquity.settings.opennewwindows=This change will take effect when you open new windows.
+ubiquity.settings.skinsaved=Your skin has been saved!
+ubiquity.settings.skinerror=Error saving your skin.
+
+############################
 # confirm-add-js.js
 # chrome://ubiquity/content/confirm-add-command.xhtml
 ############################
