l10n: Applied 02.settings.diff at #850. Skins no longer display the internal thingy for homepage.

--- a/ubiquity/chrome/locale/en-US/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/aboutubiquity.properties
@@ -38,6 +38,10 @@ ubiquity.settings.restartfirefox=This change will take effect when you restart F
 ubiquity.settings.opennewwindows=This change will take effect when you open new windows.
 ubiquity.settings.skinsaved=Your skin has been saved!
 ubiquity.settings.skinerror=Error saving your skin.
+ubiquity.settings.skinauthor=Created by %S
+ubiquity.settings.skinlicense=Licensed as %S
+ubiquity.settings.viewskinsource=view source
+ubiquity.settings.uninstallskin=uninstall
 
 ############################
 # confirm-add-js.js
