--- a/ubiquity/chrome/locale/en-US/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/aboutubiquity.properties
@@ -64,6 +64,29 @@ ubiquity.showhidehelp.show=Show Help
 ubiquity.showhidehelp.hide=Hide Help
 
 ############################
+# cmdlist.js
+# chrome://ubiquity/content/cmdlist.xhtml
+############################
+ubiquity.cmdlist.unsubscribefeed=Unsubscribe
+ubiquity.cmdlist.feedupdated=An update for this feed is available.
+ubiquity.cmdlist.view=view
+ubiquity.cmdlist.autoupdated=auto-updated
+ubiquity.cmdlist.source=source
+ubiquity.cmdlist.localetemplate=get localization template
+
+ubiquity.cmdlist.synonyms=also called
+ubiquity.cmdlist.createdby=By
+ubiquity.cmdlist.license=licensed as
+ubiquity.cmdlist.contributions=contributions by
+ubiquity.cmdlist.homepage=Homepage
+ubiquity.cmdlist.viewmoreinfo=View more information at
+
+ubiquity.cmdlist.oldparsertitle=This command was not loaded as it is incompatible with Parser 2.
+
+ubiquity.cmdlist.resubscribe=resubscribe
+ubiquity.cmdlist.purge=purge
+
+############################
 # thenext.js
 # chrome://ubiquity/content/relevant.xhtml
 ############################
