--- a/ubiquity/chrome/locale/en-US/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/aboutubiquity.properties
@@ -38,8 +38,8 @@ ubiquity.settings.restartfirefox=This change will take effect when you restart F
 ubiquity.settings.opennewwindows=This change will take effect when you open new windows.
 ubiquity.settings.skinsaved=Your skin has been saved!
 ubiquity.settings.skinerror=Error saving your skin.
-ubiquity.settings.skinauthor=Created by %S
-ubiquity.settings.skinlicense=Licensed as %S
+ubiquity.settings.skinauthor=created by %S
+ubiquity.settings.skinlicense=licensed as %S
 ubiquity.settings.viewskinsource=view source
 ubiquity.settings.uninstallskin=uninstall
 
@@ -67,19 +67,18 @@ ubiquity.showhidehelp.hide=Hide Help
 # cmdlist.js
 # chrome://ubiquity/content/cmdlist.xhtml
 ############################
-ubiquity.cmdlist.unsubscribefeed=Unsubscribe
+ubiquity.cmdlist.unsubscribefeed=unsubscribe
 ubiquity.cmdlist.feedupdated=An update for this feed is available.
-ubiquity.cmdlist.view=view
-ubiquity.cmdlist.autoupdated=auto-updated
-ubiquity.cmdlist.source=source
+ubiquity.cmdlist.viewsource=view source
+ubiquity.cmdlist.viewfeedsource=view auto-updated source
 ubiquity.cmdlist.localetemplate=get localization template
 
-ubiquity.cmdlist.synonyms=also called
-ubiquity.cmdlist.createdby=By
-ubiquity.cmdlist.license=licensed as
-ubiquity.cmdlist.contributions=contributions by
-ubiquity.cmdlist.homepage=Homepage
-ubiquity.cmdlist.viewmoreinfo=View more information at
+ubiquity.cmdlist.synonyms=also called %S
+ubiquity.cmdlist.createdby=by %S
+ubiquity.cmdlist.license=licensed as %S
+ubiquity.cmdlist.contributions=contributions by %S
+ubiquity.cmdlist.homepage=homepage
+ubiquity.cmdlist.viewmoreinfo=view more information at %S
 
 ubiquity.cmdlist.oldparsertitle=This command was not loaded as it is incompatible with Parser 2.
 
