--- a/ubiquity/localization/ja/firefox.po
+++ b/ubiquity/localization/ja/firefox.po
@@ -3,6 +3,7 @@
 # Localizers:
 # Michael Yoshitaka Erlewine <mitcho@mitcho.com>
 # Masahiko Imanaka <chimantaea_mirabilis@yahoo.co.jp>
+# Satoshi Murakami <murky.satyr@gmail.com>
 
 msgid ""
 msgstr ""
@@ -13,6 +14,13 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+
+msgid "Changes to %tab%"
+msgstr "%tab% に切り替え"
+
+msgid "Closes %tab%"
+msgstr "%tab% を閉じる"
 
 
 #. exit firefox command:
@@ -251,10 +259,11 @@ msgid "<ul style=\"list-style-image:none\">\n"
 "    <li>Use accesskey or click to undo.</li>\n"
 "    <li>Type to filter, then execute to undo all.</li>\n"
 "    </ul>"
-msgstr "<ul style=\"list-style-image:none\">\n
-    <li>アクセスキーを入力するかクリックしてください。</li>\n
-    <li>フィルタを入力して実行すると、すべてのタブを復元します。</li>\n
-    </ul>"
+msgstr "<ul style=\"list-style-image:none\">\n"
+"<li>アクセスキーを入力するかクリックしてください。</li>\n"
+"<li>タイトルか URL で絞り込めます。</li>\n"
+"<li>実行で一致した全てのタブを復元します。</li>"
+"</ul>"
 
 msgctxt "undo closed tabs.description"
 msgid "Reopens tabs you've closed recently."
